[gd_scene load_steps=14 format=3 uid="uid://cqtu0nvn7pf1g"]

[ext_resource type="Script" path="res://addons/hengo/scripts/state.gd" id="1_83mqb"]
[ext_resource type="FontFile" uid="uid://c5wxb4esayen3" path="res://addons/hengo/assets/fonts/Inter-SemiBold.ttf" id="2_gskjw"]
[ext_resource type="Texture2D" uid="uid://dt6jgixjf857c" path="res://addons/hengo/assets/icons/arrow_horizontal.svg" id="2_w0w5j"]
[ext_resource type="Script" path="res://addons/hengo/scripts/state_arrow.gd" id="3_6rctr"]
[ext_resource type="Texture2D" uid="uid://cuutceef7st2" path="res://addons/hengo/assets/icons/cnode/go_to.svg" id="3_mpv6s"]
[ext_resource type="Shader" path="res://addons/hengo/assets/shaders/state_debug.gdshader" id="5_5ewri"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agnrl"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.159704, 0.169409, 0.23237, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.188235)
shadow_size = 14
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxaa8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o30u6"]
content_margin_left = 12.0
content_margin_top = 2.0
content_margin_right = 12.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0.270588)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2v313"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.288, 0.9, 0.8898, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3gdk"]
bg_color = Color(0.6, 1, 0.556863, 0.258824)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.713726, 0.470588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5nend"]
shader = ExtResource("5_5ewri")
shader_parameter/shine_color = Color(0.95, 0, 0.300833, 0.619608)
shader_parameter/line_width = 0.8
shader_parameter/angle = 0.785398
shader_parameter/speed = 0.8
shader_parameter/wait_cycles = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j42tk"]
bg_color = Color(0, 0.726, 0.99, 0.254902)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.110861, 0.530923, 0.884562, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="State" type="PanelContainer"]
offset_right = 122.0
offset_bottom = 36.0
theme_override_styles/panel = SubResource("StyleBoxFlat_agnrl")
script = ExtResource("1_83mqb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_gskjw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pxaa8")
theme_override_styles/normal = SubResource("StyleBoxFlat_o30u6")
text = "State Name"
icon = ExtResource("3_mpv6s")

[node name="Control2" type="Control" parent="VBoxContainer/Title"]
process_mode = 4
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="RightArrow" type="TextureRect" parent="VBoxContainer/Title/Control2"]
unique_name_in_owner = true
visible = false
modulate = Color(0.435294, 0.435294, 0.435294, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -9.5
offset_right = 16.0
offset_bottom = 9.5
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(40, -10)
texture = ExtResource("2_w0w5j")
stretch_mode = 5
flip_h = true
script = ExtResource("3_6rctr")

[node name="EventContainer" type="Control" parent="VBoxContainer/Title"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -5.0
offset_bottom = -5.0
grow_horizontal = 2

[node name="Control" type="Control" parent="VBoxContainer/Title"]
process_mode = 4
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
grow_vertical = 2

[node name="LeftArrow" type="TextureRect" parent="VBoxContainer/Title/Control"]
unique_name_in_owner = true
visible = false
modulate = Color(0.435192, 0.435192, 0.435192, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -9.5
offset_bottom = 9.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(-24, -10)
texture = ExtResource("2_w0w5j")
stretch_mode = 5
script = ExtResource("3_6rctr")

[node name="TransitionContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="SelectBorder" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2v313")

[node name="HoverBorder" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c3gdk")

[node name="DebugBorder" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
material = SubResource("ShaderMaterial_5nend")
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j42tk")
